clientVendor service